# voiceglp

./: .gitignore  DATASET_SELECTION.md  PAPER_NOTES.md  PLAN.md  PROGRESS.md  README.md  RESEARCH_BRIEF.md  pyproject.toml
audioprune/scoring/: fft_features.py  model_scores.py
audioprune/selection/: baselines.py  difficulty.py  fft_prune.py  hybrid.py  semantic.py
results/: model_scoring_pipeline.sh  opus_sweep.csv
results/manifests/: b1_random_h10_s0.json  b1_random_h10_s1.json  b1_random_h25_s0.json  b1_random_h25_s1.json  b1_random_h50_s0.json  b1_random_h50_s1.json  b2_text_dedup_h10_s0.json  b2_text_dedup_h25_s0.json  b2_text_dedup_h50_s0.json  f1_density_h10_s0.json  f1_density_h25_s0.json  f1_density_h50_s0.json  f3_coverage_h10_s0.json  f3_coverage_h25_s0.json  f3_coverage_h50_s0.json
scripts/: 01_score.py  02_select.py  03_train.py  04_eval.py  dedup_stack_test.py  dup_recall_test.py  opus_sweep.py  smoke_test.py
